--- a/07_authorization/flatiron_theater_company/client/package.json
+++ b/07_authorization/flatiron_theater_company/client/package.json
@@ -12,6 +12,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-redux": "8.0.5",
+    "@reduxjs/toolkit": "^1.9.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2"
   },
